--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                <div>     
                           <a class="link link-active" href="/">About Me</a> 
-                          <a class="link" href="/projects.html">My Projects</a>
+                          <a class="link" href="/project.html">My Projects</a>
                           <a class="link" href="/blogs.html"> My Blogs</a>
                </div>
             
