--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <section class="section_1 container-center">
         <h2><b><span class="hl">Projects</span></b></h2>
         <p><b>I have made some projects using CLI, Javascript and React and I will love to receive your feedback on them !!</b></p>
-        <a class=" link primary-link "  href="/projects.html">View them</a>
+        <a class=" link primary-link "  href="/project.html">View them</a>
     </section>
     <section class="section_2 container-center space-bottom">
         <h2><b><span class="hl">Blogs</span></b></h2>
