feat:added dark quiz

--- a/project.html
+++ b/project.html
@@ -25,5 +25,10 @@
         <p><b>This is A CLI App made using Repl.it and Javascript </b></p>.
        <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me?embed=1&output=1#index.js">Take Quiz</a>
        </section></small> 
+    <section class="section_2 container-center ">
+           <h3><b><span class="hl large-font">The-Dark-Quiz</span></b></h3>
+           <p><b>This is Another CLI App made using Repl.it and Javascript which contains a Quiz on Dark Web Series </b></p>.
+          <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/The-Dark-Quiz-1?embed=1&output=1#index.js">Take Quiz</a>
+    </section></small> 
 </body>
 </html>
