--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2><b><span class="hl">Blogs</span></b></h2>
         <p><b>Yeah so, here are my Blogs !! I hope you enjoy reading them:)<br>(No Feedbacks:P)</b> </p>
         <a class="link primary-link" href="/blogs.html">Read my Blogs</a>
-        <a class="link primary-link" href="/blogs.html">My Resume</a>
+        <!-- <a class="link primary-link" href="/blogs.html">My Resume</a> -->
      </section>
 
      <!-- <h2>@footer</h2> -->
@@ -56,7 +56,7 @@
             <a class="link" href="/">twitter</a>
             <a class="link" href="/">linkedin</a>
     </div>
-
+    
     
 </body>
 </html>
