--- a/project.html
+++ b/project.html
@@ -22,13 +22,19 @@
     <div class="space-bottom"></div>;
     <section class="section_1 container-center ">
         <h3><b><span class="hl large-font">How-Well-You-Know-Me-Quiz</span></b></h3>
-        <p><b>This is A CLI App made using Repl.it and Javascript </b></p>.
-       <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me?embed=1&output=1#index.js">Take Quiz</a>
+        <p><b>This is A CLI App made using Repl.it and Javascript </b></p><br>
+       <small><a class="link primary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me?embed=1&output=1#index.js">Take Quiz</a>
        </section></small> 
     <section class="section_2 container-center ">
            <h3><b><span class="hl large-font">The-Dark-Quiz</span></b></h3>
-           <p><b>This is Another CLI App made using Repl.it and Javascript which contains a Quiz on Dark Web Series </b></p>.
+           <p><b>This is Another CLI App made using Repl.it and Javascript which contains a Quiz on Dark Web Series </b></p><br>
           <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/The-Dark-Quiz-1?embed=1&output=1#index.js">Take Quiz</a>
     </section></small> 
+    <section class="section_1 container-center ">
+        <h3><b><span class="hl large-font">Banana-Speak</span></b></h3>
+        <p><b>This is a Web App made using Vanilla JS, HTMl and CSS which converts Normal English text to Banana Language </b></p><br>
+       <small><a class="link primary-link large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a>
+       </section></small> 
+       <div style="padding:3rem"></div>
 </body>
 </html>
