fix:fixed project.html

--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
                <div>     
                           <a class="link " href="/index.html">About Me</a> 
                           <a class="link " href="/project.html">My Projects</a>
-                          <a class="link link-active" href="/blogs.html"> My Blogs</a>
+                          <a class="link link-active" href="/"> My Blogs</a>
                </div>
             
        </nav>   
