--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 
                <div>     
                           <a class="link " href="/index.html">About Me</a> 
-                          <a class="link link-active" href="/projects.html">My Projects</a>
+                          <a class="link link-active" href="/project.html">My Projects</a>
                           <a class="link" href="/blogs.html"> My Blogs</a>
                </div>
             
