--- a/project.html
+++ b/project.html
@@ -31,8 +31,8 @@
           <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/The-Dark-Quiz-1?embed=1&output=1#index.js">Take Quiz</a>
     </section></small> 
     <section class="section_1 container-center ">
-        <h3><b><span class="hl large-font">Banana-Speak</span></b></h3>
-        <p><b>This is a Web App made using Vanilla JS, HTMl and CSS which converts Normal English text to Banana Language </b></p><br>
+        <h3><b><span class="hl large-font">Minion-Speak</span></b></h3>
+        <p><b>This is a Web App made using Vanilla JS, HTML and CSS which converts Normal English text to Banana🍌 Language </b></p><br>
        <small><a class="link primary-link large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a>
        </section></small> 
        <div style="padding:3rem"></div>
