--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
             
        </nav> 
     </h1> 
-    <div class="space-bottom"></div>;
+    <div class="space-top"></div>;
     <section class="section_1 container-center ">
         <h3><b><span class="hl large-font">How-Well-You-Know-Me-Quiz</span></b></h3>
         <p><b>This is A CLI App made using Repl.it and Javascript </b></p><br>
