feat:added emojiapp

--- a/project.html
+++ b/project.html
@@ -35,6 +35,11 @@
         <p><b>This is a Web App made using Vanilla JS, HTML and CSS which converts Normal English text to Banana🍌 Language </b></p><br>
        <small><a class="link primary-link large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a>
        </section></small> 
+    <section class="section_2 container-center ">
+        <h3><b><span class="hl large-font">Dummy-Emojipedia</span></b></h3>
+        <p><b>A React APP which defines an Emoji on entering it and also provides a description of Emoji on clicking one from the given list of Emojis </b></p><br>
+       <small><a class="link secondary-link large-font" href="https://96ld0.csb.app/">Check  it Out!</a>
+ </section></small>
        <div style="padding:3rem"></div>
 </body>
 </html>
