--- a/project.html
+++ b/project.html
@@ -20,26 +20,34 @@
        </nav> 
     </h1> 
     <div class="space-top"></div>;
-    <section class="section_1 container-center ">
+    <ul class="list-non-bullet list-reverse-order"><
+    <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">How-Well-You-Know-Me-Quiz</span></b></h3>
         <p><b>This is A CLI App made using Repl.it and Javascript </b></p><br>
        <small><a class="link primary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me?embed=1&output=1#index.js">Take Quiz</a>
-       </section></small> 
-    <section class="section_2 container-center ">
+       </section></small> </li>
+   <li> <section class="section_2 container-center ">
            <h3><b><span class="hl large-font">The-Dark-Quiz</span></b></h3>
            <p><b>This is Another CLI App made using Repl.it and Javascript which contains a Quiz on Dark Web Series </b></p><br>
           <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/The-Dark-Quiz-1?embed=1&output=1#index.js">Take Quiz</a>
-    </section></small> 
-    <section class="section_1 container-center ">
+    </section></small> </li>
+    <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">Minion-Speak</span></b></h3>
         <p><b>This is a Web App made using Vanilla JS, HTML and CSS which converts Normal English text to Banana🍌 Language </b></p><br>
        <small><a class="link primary-link large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a>
-       </section></small> 
-    <section class="section_2 container-center ">
+       </section></small> </li>
+    <li><section class="section_2 container-center ">
         <h3><b><span class="hl large-font">Dummy-Emojipedia</span></b></h3>
         <p><b>A React APP which defines an Emoji on entering it and also provides a description of Emoji on clicking one from the given list of Emojis </b></p><br>
        <small><a class="link secondary-link large-font" href="https://96ld0.csb.app/">Check  it Out!</a>
- </section></small>
+ </section></small></li>
+</ul>
        <div style="padding:3rem"></div>
+   <div class="footer">Connect with me:
+        <br><br>
+            <a class="link" href="/">instagram</a>
+            <a class="link" href="/">twitter</a>
+            <a class="link" href="/">linkedin</a>
+    </div>
 </body>
 </html>
