--- a/blogs.html
+++ b/blogs.html
@@ -19,6 +19,13 @@
                           <a class="link link-active" href="/blogs.html"> My Blogs</a>
                </div>
             
-       </nav>   
+       </nav>  
+       <div style="padding:3rem"></div>
+       <div class="footer">Connect with me:
+        <br><br>
+            <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
+            <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
+            <a class="link" href="https://www.instagram.com/dodo.8121/">instagram</a>
+    </div> 
 </body>
 </html>
