--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
      <!-- <h2>@footer</h2> -->
     <div class="footer">Connect with me:
         <br><br>
-            <a class="link" href="/">instagram</a>
-            <a class="link" href="/">twitter</a>
-            <a class="link" href="/">linkedin</a>
+            <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
+            <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
+            <a class="link" href="https://www.instagram.com/dodo.8121/">instagram</a>
     </div>
     
     
