--- a/project.html
+++ b/project.html
@@ -43,11 +43,11 @@
  </section></small></li>
 </ul>
        <div style="padding:3rem"></div>
-   <div class="footer">Connect with me:
+       <div class="footer">Connect with me:
         <br><br>
-            <a class="link" href="/">instagram</a>
-            <a class="link" href="/">twitter</a>
-            <a class="link" href="/">linkedin</a>
+            <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
+            <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
+            <a class="link" href="https://www.instagram.com/dodo.8121/">instagram</a>
     </div>
 </body>
 </html>
