--- a/blogs.html
+++ b/blogs.html
@@ -19,7 +19,7 @@
                           <a class="link link-active" href="/blogs.html"> My Blogs</a>
                </div>
             
-       </nav>  
+       </nav>  </h1>
        <div style="padding:3rem"></div>
        <div class="footer">Connect with me:
         <br><br>
