--- a/project.html
+++ b/project.html
@@ -37,10 +37,25 @@
        <small><a class="link primary-link large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a>
        </section></small> </li>
     <li><section class="section_2 container-center ">
+        <h3><b><span class="hl large-font">Dothraki-Valerian-Translator</span></b></h3>
+        <p><b>A Web App made using Vanilla JS, HTML and CSS which converts Normal English text to Dothraki-Valerian </b></p><br>
+       <small><a class="link secondary-link large-font" href="https://doth-val.netlify.app/">Learn!⚔️</a>
+       </section></small> </li>
+    <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">Dummy-Emojipedia</span></b></h3>
-        <p><b>A React APP which defines an Emoji on entering it and also provides a description of Emoji on clicking one from the given list of Emojis </b></p><br>
-       <small><a class="link secondary-link large-font" href="https://96ld0.csb.app/">Check  it Out!</a>
+        <p><b>This is an APP made using Codesandbox which defines an Emoji on entering it and also provides a description of Emoji on clicking one from the given list of Emojis </b></p><br>
+       <small><a class="link primary-link large-font" href="https://96ld0.csb.app/">Check  it Out!</a>
  </section></small></li>
+ <li><section class="section_2 container-center ">
+    <h3><b><span class="hl large-font">Cash-Change-Manager</span></b></h3>
+    <p><b>An App made using Codesandbox,React Js,HTML and CSS which returns Minimum Number of Notes required for giving back change to Customer</b></p><br>
+   <small><a class="link secondary-link large-font" href="https://2tk3u.csb.app/">Check it Out!</a>
+   </section></small> </li>
+ <li><section class="section_1 container-center ">
+    <h3><b><span class="hl large-font">IS Your Birtthday Lucky??</span></b></h3>
+    <p><b>A Fun App made using Codesandbox,React Js,HTML and CSS which tells whether your Birthday is Lucky Or Not</b></p><br>
+   <small><a class="link primary-link large-font" href="https://2tk3u.csb.app/">Find Out!</a>
+   </section></small> </li>
 </ul>
        <div style="padding:3rem"></div>
        <div class="footer">Connect with me:
