--- a/project.html
+++ b/project.html
@@ -19,8 +19,8 @@
             
        </nav> 
     </h1> 
-    <div class="space-top"></div>;
-    <ul class="list-non-bullet list-reverse-order"><
+    <div class="space-top"></div>
+    <ul class="list-non-bullet list-reverse-order">
     <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">How-Well-You-Know-Me-Quiz</span></b></h3>
         <p><b>This is A CLI App made using Repl.it and Javascript </b></p><br>
