--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
  <li><section class="section_2 container-center ">
     <h3><b><span class="hl large-font">Cash-Change-Manager</span></b></h3>
     <p><b>An App made using Codesandbox,React Js,HTML and CSS which returns Minimum Number of Notes required for giving back change to Customer</b></p><br>
-   <small><a class="link secondary-link large-font" href="https://2tk3u.csb.app/">Check it Out!</a>
+   <small><a class="link secondary-link large-font" href="https://ti8v5.csb.app/">Check it Out!</a>
    </section></small> </li>
  <li><section class="section_1 container-center ">
     <h3><b><span class="hl large-font">IS Your Birtthday Lucky??</span></b></h3>
