--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
     <section class="section_2 container-center space-bottom">
         <h2><b><span class="hl">Blogs</span></b></h2>
-        <p><b>Yeah so, here are my Blogs !! I hope you enjoy reading them:)<br>(No Feedbacks:P)</b> </p>
+        <p><b>Yeah so, here are my Blogs !! I hope you enjoy reading them 😊</b> </p>
         <a class="link primary-link" href="/blogs.html">Read my Blogs</a>
         <!-- <a class="link primary-link" href="/blogs.html">My Resume</a> -->
      </section>
