--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
     <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">How-Well-You-Know-Me-Quiz</span></b></h3>
         <p><b>This is A CLI App made using Repl.it and Javascript </b></p><br>
-        <small><a class="link primary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me?embed=1&output=1#index.js">Take Quiz</a></small>
+        <small><a class="link primary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me-1?embed=1&ouput=1#index.js">Take Quiz</a></small>
         <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/How-Well-You-Know-Me-Quiz">View Source</a>
     </section> </li>
    <li> <section class="section_2 container-center ">
