--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section class="section_2 container-center">
         <h2><b><span class="hl">Education</span></b></h2>
-        <p><b>Currently doing Bsc Honors Physics from Panjab University Chandigarh</b> </p>
+        <p><b>Graduated from Panjab University Chandigarh</b> </p>
      </section>
      <section class="section_1 container-center">
         <h2><b><span class="hl">Projects</span></b></h2>
