--- a/project.html
+++ b/project.html
@@ -24,68 +24,68 @@
     <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">How-Well-You-Know-Me-Quiz</span></b></h3>
         <p><b>This is A CLI App made using Repl.it and Javascript </b></p><br>
-        <small><a class="link primary-link large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me-1?embed=1&ouput=1#index.js">Take Quiz</a></small>
-        <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/How-Well-You-Know-Me-Quiz">View Source</a>
+        <small><a class="link link-primary large-font" href="https://replit.com/@Bhavya09/How-well-u-know-me-1?embed=1&ouput=1#index.js">Take Quiz</a></small>
+        <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/How-Well-You-Know-Me-Quiz">View Source</a>
     </section> </li>
    <li> <section class="section_2 container-center ">
         <h3><b><span class="hl large-font">The-Dark-Quiz</span></b></h3>
         <p><b>This is Another CLI App made using Repl.it and Javascript which contains a Quiz on Dark Web Series </b></p><br>
-        <small><a class="link secondary-link large-font" href="https://replit.com/@Bhavya09/The-Dark-Quiz-1?embed=1&output=1#index.js">Take Quiz</a></small>
-        <br><br><br><a class="link primary-link" href="https://github.com/BhavyaPant-bly/The-Dark-Quiz">View Source</a>   
+        <small><a class="link link-primary large-font" href="https://replit.com/@Bhavya09/The-Dark-Quiz-1?embed=1&output=1#index.js">Take Quiz</a></small>
+        <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/The-Dark-Quiz">View Source</a>   
         </section> </li>
     <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">Minion-Speak</span></b></h3>
         <p><b>This is a Web App made using Vanilla JS, HTML and CSS which converts Normal English text to Banana🍌 Language </b></p><br>
-       <small><a class="link primary-link large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a></small>
-       <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/Banana-Speak">View Source</a>
+       <small><a class="link link-primary large-font" href="https://bhavya-banana-speak.netlify.app/">Have A Look!</a></small>
+       <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/Banana-Speak">View Source</a>
        </section> </li>
     <li><section class="section_2 container-center ">
         <h3><b><span class="hl large-font">Dothraki-Valerian-Translator</span></b></h3>
         <p><b>A Web App made using Vanilla JS, HTML and CSS which converts Normal English text to Dothraki-Valerian </b></p><br>
-       <small><a class="link secondary-link large-font" href="https://doth-val.netlify.app/">Learn!⚔️</a></small>
-       <br><br><br><a class="link primary-link" href="https://github.com/BhavyaPant-bly/Dothraki-Valerian-Translator">View Source⚔️</a>
+       <small><a class="link link-primary large-font" href="https://doth-val.netlify.app/">Learn!⚔️</a></small>
+       <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/Dothraki-Valerian-Translator">View Source⚔️</a>
        </section> </li>
     <li><section class="section_1 container-center ">
         <h3><b><span class="hl large-font">Dummy-Emojipedia</span></b></h3>
         <p><b>This is an APP made using Codesandbox which defines an Emoji on entering it and also provides a description of Emoji on clicking one from the given list of Emojis </b></p><br>
-       <small><a class="link primary-link large-font" href="https://96ld0.csb.app/">Check  it Out!</a></small>
-       <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/emojipedia">View Source</a>
+       <small><a class="link link-primary large-font" href="https://96ld0.csb.app/">Check  it Out!</a></small>
+       <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/emojipedia">View Source</a>
  </section></li>
  <li><section class="section_2 container-center ">
     <h3><b><span class="hl large-font">Travel places in India</span></b></h3>
     <p><b>An App Made using CodeSandbox,React Js,Css which lists Top Travel Places in India for various varieties with Ratings </b></p><br>
-   <small><a class="link primary-link large-font" href="https://8yg9f.csb.app/">Check it Out!</a></small>
-   <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/travel-places-in-India">View Source</a></small>
+   <small><a class="link link-primary large-font" href="https://8yg9f.csb.app/">Check it Out!</a></small>
+   <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/travel-places-in-India">View Source</a></small>
    </section> </li>
  <li><section class="section_1 container-center ">
     <h3><b><span class="hl large-font">Cash-Change-Manager</span></b></h3>
     <p><b>An App made using Codesandbox,React Js,HTML and CSS which returns Minimum Number of Notes required for giving back change to Customer</b></p><br>
-   <small><a class="link secondary-link large-font" href="https://ti8v5.csb.app/">Check it Out!</a></small>
-   <br><br><br><a class="link primary-link" href="https://github.com/BhavyaPant-bly/mark10-CashChangeManager">View Source</a>
+   <small><a class="link link-primary large-font" href="https://ti8v5.csb.app/">Check it Out!</a></small>
+   <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/mark10-CashChangeManager">View Source</a>
    </section> </li>
  <li><section class="section_2 container-center ">
     <h3><b><span class="hl large-font">IS Your Birtthday Lucky??</span></b></h3>
     <p><b>A Fun App made using Codesandbox,React Js,HTML and CSS which tells whether your Birthday is Lucky Or Not</b></p><br>
-   <small><a class="link primary-link large-font" href="https://2tk3u.csb.app/">Find Out!</a></small>
-   <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/Is-your-birthday-Lucky">View Source</a></small>
+   <small><a class="link link-primary large-font" href="https://2tk3u.csb.app/">Find Out!</a></small>
+   <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/Is-your-birthday-Lucky">View Source</a></small>
    </section> </li>
 <li><section class="section_1 container-center ">
     <h3><b><span class="hl large-font">Fun With Triangles</span></b></h3>
     <p><b>Another Fun App made using Vanilla Js,HTML and CSS which contains a quiz,area calculator for triangles,hypotenuse calculater and Triangle Validator</b></p><br>
-   <small><a class="link secondary-link large-font" href="https://triangles-fun-app.netlify.app/">Check it Out!</a></small>
-   <br><br><br><a class="link primary-link" href="https://github.com/BhavyaPant-bly/Triangles-fun-app">View Source</a>
+   <small><a class="link link-primary large-font" href="https://triangles-fun-app.netlify.app/">Check it Out!</a></small>
+   <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/Triangles-fun-app">View Source</a>
    </section> </li>
 <li><section class="section_2 container-center ">
     <h3><b><span class="hl large-font">Pallindrome-Birthday</span></b></h3>
     <p><b>Another Fun App made using Vanilla Js,HTML and CSS which checks whether your birthday is a Pallindrome or not</b></p><br>
-   <small><a class="link primary-link large-font" href="https://pallindrome-birthday.netlify.app/">Check it Out!</a></small>
-   <br><br><br><a class="link secondary-link" href="https://github.com/BhavyaPant-bly/Pallindrome-Birthday">View Source</a>
+   <small><a class="link link-primary large-font" href="https://pallindrome-birthday.netlify.app/">Check it Out!</a></small>
+   <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/Pallindrome-Birthday">View Source</a>
    </section> </li>
 <li><section class="section_1 container-center ">
     <h3><b><span class="hl large-font">Stocks</span></b></h3>
     <p><b>An App made using Vanilla Js,HTML and CSS which tells how much Profit or Loss user is making on a Stock</b></p><br>
-   <small><a class="link secondary-link large-font" href="https://stock-loss-profit.netlify.app/">Check it Out!</a></small>
-   <br><br><br><a class="link primary-link" href="https://github.com/BhavyaPant-bly/Stocks-Report">View Source</a>
+   <small><a class="link link-primary large-font" href="https://stock-loss-profit.netlify.app/">Check it Out!</a></small>
+   <br><br><br><a class="link link-secondary" href="https://github.com/BhavyaPant-bly/Stocks-Report">View Source</a>
    </section> </li>
 </ul>
        <div style="padding:3rem"></div>
