--- a/blogs.html
+++ b/blogs.html
@@ -26,14 +26,14 @@
         <h3><b><span class="hl large-font">Can Quantum Entanglement prove the Theory of Relativity wrong??</span></b></h3>
         <small style="color:gray">16 August 2021</small>
         <p><b>Physics is still struggling to have a unified theory which defines the properties of everything from fermions and bosons (subatomic particles) to solar systems and galaxies. Relativity has a good hand over macro objects while Quantum Mechanics rules over the subatomic world but both clash with each other many times. While no scientist till date is able to prove wrong the principles over which the theory of relativity is based. But everyone knows at heart that this is not the perfect theory as it does not work everywhere.</b></p><br>
-       <h3 style="font-weight: lighter;margin:0px;"><a class="link primary-link" href="https://quantum-entaglement.netlify.app/">Read more</a></h3>
+       <h3 style="font-weight: lighter;margin:0px;"><a class="link link-primary" href="https://quantum-entaglement.netlify.app/">Read more</a></h3>
        </section> </li>
        <li><section class="section_2" style="text-align: justify; padding-bottom:2rem; ">
         <h3><b><span class="hl large-font">The power of Quantum Computing!!</span></b></h3>
         <small style="color:gray">16 August 2021</small>
         <p><b>What are quantum computers?? Why do all the big companies like Google, IBM, NASA are spending so much over building them??
             Well for now most of us know that these computers are much faster rather exponentially faster than the normal computers. It is even said a normal quantum computer beats the fastest ever super computer.</b></p><br>
-       <h3 style="font-weight: lighter; margin:0px;"><a class="link primary-link" href="https://quantum-computing.netlify.app/">Read more</a></h3>
+       <h3 style="font-weight: lighter; margin:0px;"><a class="link link-primary" href="https://quantum-computing.netlify.app/">Read more</a></h3>
        </section> </li> 
        </ul> 
        <div style="padding:2rem"></div>
