--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section class="section_1 container-center">
         <h2><b><span class="hl">Skills:</span></b></h2>
-        <h3>Web Dev:<br>HTML5, CSS, React and Javascript<br><br>Other Skills:<br>C, C++, Java and Python</h3>
+        <h3>Web Dev:<br>HTML5, CSS,and Javascript<br><br>Other Skills:<br>C, C++, Java and Python</h3>
         <p>Yeah! You guessed it right I am a <span class="hl">Web Developer</span> and I love doing Competitive Coding and learning Algos.</p>
     </section>
     <section class="section_2 container-center">
