--- a/project.html
+++ b/project.html
@@ -99,9 +99,9 @@
        <div style="padding:3rem"></div>
        <div class="footer">Connect with me:
         <br><br>
-            <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
+            <!-- <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
             <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
-            <a class="link" href="https://www.instagram.com/bhavya.0.9/">instagram</a>
+            <a class="link" href="https://www.instagram.com/bhavya.0.9/">instagram</a> -->
     </div>
 </body>
 </html>
