--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,7 @@
        </section> </li> 
        </ul> 
        <div style="padding:2rem"></div>
-       <div class="footer">Connect with me:
+       <div class="footer">
         <br><br>
             <!-- <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
             <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
