--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
      </section>
 
      <!-- <h2>@footer</h2> -->
-    <div class="footer">Connect with me:
+    <div class="footer">
         <br><br>
             <!-- <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
             <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
