--- a/project.html
+++ b/project.html
@@ -97,7 +97,7 @@
    </section> </li>
 </ul>
        <div style="padding:3rem"></div>
-       <div class="footer">Connect with me:
+       <div class="footer">
         <br><br>
             <!-- <a class="link" href="https://www.linkedin.com/in/bhavya-pant09/">linkedin</a>
             <a class="link" href="https://github.com/BhavyaPant-bly">github</a>
